clusters/beryjuorg-prd/registry/pullthrough-token/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pullthrough-registry-token
  name: pullthrough-registry-token
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pullthrough-registry-token
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pullthrough-registry-token
    spec:
      containers:
      - image: ghcr.io/beryju/distribution-oauth:latest-1654158928-77e39d206f97e32e315affe08601abdc4f88fb8c # {"$imagepolicy": "flux-system:registry-token"}
        name: token-svc
        resources:
          requests:
            memory: 100M
            cpu: 50m
          limits:
            memory: 300M
            cpu: 100m
        ports:
        - containerPort: 9001
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
