clusters/beryjuorg-prd/registry/pullthrough-token/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pullthrough-registry-token
  namespace: registry
spec:
  ingressClassName: istio
  rules:
    - host: proxy.registry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: pullthrough-registry-token
                port:
                  number: 9001
            path: /token
            pathType: Prefix
  tls:
    - hosts:
        - proxy.registry.beryju.org
      secretName: beryjuorg-gw-registries
